tmp/kiranjoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiranjoy-web
  namespace: kiranjoy-prod
  labels:
    app: kiranjoy-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kiranjoy-web
