tmp/kiranjoy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiranjoy-web
  namespace: kiranjoy-prod
  labels:
    app: kiranjoy-web
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: kiranjoy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiranjoy-web
            port:
              number: 80
